--- a/package.json
+++ b/package.json
@@ -43,9 +43,10 @@
     "gulp-changed": "1.2.1",
     "gulp-colorize-svgs": "git://github.com/unic/gulp-colorize-svgs.git#v0.1.0",
     "gulp-concat": "2.5.2",
+    "gulp-declare": "0.3.0",
+    "gulp-define-module": "0.1.3",
     "gulp-file": "0.2.0",
     "gulp-flatten": "0.0.4",
-    "gulp-hb": "2.5.0",
     "gulp-iconfont": "1.0.0",
     "gulp-if": "1.2.5",
     "gulp-ignore": "1.2.1",
@@ -62,26 +63,25 @@
     "gulp-qunit": "1.2.1",
     "gulp-raster": "git://github.com/unic/gulp-raster.git#6e0dba1",
     "gulp-rename": "1.2.2",
+    "gulp-resolve-dependencies": "2.1.0",
     "gulp-sass": "2.0.3",
     "gulp-simplefont64": "0.0.1",
     "gulp-size": "1.2.1",
     "gulp-sourcemaps": "1.5.2",
     "gulp-svg-dimensions": "git://github.com/unic/gulp-svg-dimensions.git#v0.1.0",
     "gulp-tap": "0.1.3",
+    "gulp-twig": "git://github.com/backflip/gulp-twig.git#5a08883678409301989bda1e9e238caf300dab94",
     "gulp-uglify": "1.2.0",
     "gulp-util": "3.0.4",
     "gulp-watch": "4.2.4",
     "gulp.spritesmith": "3.6.1",
-    "handlebars": "3.0.3",
-    "handlebars-helpers": "0.5.8",
-    "handlebars-layouts": "2.0.2",
-    "handlebars-loader": "1.1.4",
     "highlight.js": "8.5.0",
     "imports-loader": "0.6.5",
     "inquirer": "0.8.4",
     "jshint-stylish": "1.0.2",
     "lazypipe": "0.2.3",
     "lodash": "3.8.0",
+    "lodash-cli": "3.8.0",
     "marked": "0.3.3",
     "merge-stream": "0.1.7",
     "mocha": "2.2.4",
@@ -89,6 +89,7 @@
     "node-sass": "3.3.3",
     "open": "0.0.5",
     "phantomjs-polyfill": "0.0.1",
+    "promise": "7.1.1",
     "qunitjs": "1.20.0",
     "require-dir": "0.3.0",
     "require-new": "1.0.2",
@@ -97,6 +98,7 @@
     "should": "6.0.1",
     "style-loader": "0.13.0",
     "through2": "2.0.0",
+    "twig": "0.8.7",
     "vinyl-buffer": "1.0.0",
     "vinyl-paths": "1.0.0",
     "webpack": "1.13.1"
