--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "skip-link-focus": "0.1.0"
   },
   "engines": {
-    "node": ">= 0.10"
+    "node": "0.12.x"
   },
   "devDependencies": {
     "babel-core": "6.5.2",
@@ -99,6 +99,7 @@
     "style-loader": "0.13.0",
     "through2": "2.0.0",
     "twig": "0.8.7",
+    "validate-node-version": "1.1.1",
     "vinyl-buffer": "1.0.0",
     "vinyl-paths": "1.0.0",
     "webpack": "1.13.1"
